# OSx86

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
linker/: Cargo.toml
linker/.cargo/: config.toml
linker/src/: main.rs
os/: Cargo.toml
os/.cargo/: config.toml
os/src/: allocator.rs  exit.rs  interrupts.rs  main.rs  memory.rs  serial.rs  vga.rs
os/src/system/: gdt.rs  serial.rs  timer.rs  vga.rs
riscv/: Cargo.toml  link.x  main  memory.x
riscv/.cargo/: config.toml
riscv/src/: main.rs
src/: apps.rs  main.rs  menu.rs
src/snake/: font_data.txt  game.rs
src/system/: interrupts.rs  keyboard.rs  mod.rs  random.rs
unsafe_demo/src/: lib.rs  main.rs
wc/: Cargo.toml  book.txt
wc/src/: main.rs
x86/: Cargo.toml
x86/.cargo/: config.toml
x86/src/: main.rs  vga.rs
