[package]
name = "os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "os"
test = true
bench = false

[dependencies]
uart_16550 = "0.2.0"
x86_64 = "0.15.4"
bootloader = { version = "0.9", features = ["map_physical_memory"]}
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
spin = "0.10.0"
linked_list_allocator = "0.9.0"
vga = "0.2.9"




[package.metadata.bootimage]
run-args = ["-serial", "stdio", "-vga", "std"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
